<resources>
    <string name="app_name">AndroidPizzeria</string>
    <string name="flavorLabel">Pizza Flavor</string>
    <string-array name="flavors">
        <item>DELUXE</item>
        <item>MEATZZA</item>
        <item>BBQ CHICKEN</item>
        <item>BUILD YOUR OWN</item>
    </string-array>
    <string name="smallRadioLabel">SMALL</string>
    <string name="mediumRadioLabel">MEDIUM</string>
    <string name="largeRadioLabel">LARGE</string>
    <string name="crustTextView">CRUST: </string>
    <string name="priceTextView">PRICE: $0.00</string>
    <string name="orderTextView">ORDER #:</string>
    <string name="addToOrderLabel">ADD TO ORDER</string>
    <string name="backLabel">BACK</string>
    <string name="subtotalTextView">SUBTOTAL: $0.00</string>
    <string name="taxTextView">TAX: $0.00</string>
    <string name="totalTextView">TOTAL: $0.00</string>
    <string name="removePizzaLabel">REMOVE PIZZA</string>
    <string name="removeOrderLabel">REMOVE ORDER</string>
    <string name="clearOrderLabel">CLEAR ORDER</string>
    <string name="placeOrderLabel">PLACE ORDER</string>
    <string name="exportOrderLabel">EXPORT ALL</string>
    <string name="allToppingsTextView">ALL TOPPINGS</string>
    <string name="addedToppingsTextView">CURRENT TOPPINGS</string>
    <string name="RUPizzeria">RU PIZZERIA</string>
    <string name="chicagoActivityButton">CHICAGO STYLE</string>
    <string name="newYorkActivityButton">NEW YORK STYLE</string>
    <string name="currentOrderActivityButton">CURRENT ORDER</string>
    <string name="storeOrdersActivityButton">STORE ORDERS</string>
    <string name="orderSpinnerLabel">Number</string>
</resources>