<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D89968"
                android:text="@string/backLabel"
                android:textColor="#3A2A25"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/orderTextView"
                android:layout_width="242dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:textColor="#5A4139"
                android:text="@string/orderTextView"
                android:textSize="26sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <ListView
            android:id="@+id/orderListView"
            android:background="@drawable/view_border"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtotalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:background="@drawable/text_border_2"
                    android:gravity="center|center_vertical"
                    android:textColor="#5A4139"
                    android:text="@string/subtotalTextView"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/taxTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:background="@drawable/text_border_2"
                    android:gravity="center"
                    android:textColor="#5A4139"
                    android:text="@string/taxTextView"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/text_border_2"
                android:gravity="center"
                android:text="@string/totalTextView"
                android:textColor="#5A4139"
                android:textSize="24sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/placeOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#D89968"
                android:fontFamily="sans-serif-medium"
                android:text="@string/placeOrderLabel"
                android:textColor="#5A4139"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="129dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/removePizzaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#F6C295"
                    android:text="@string/removePizzaLabel"
                    android:textColor="#63473E" />

                <Button
                    android:id="@+id/clearOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#F6C8A1"
                    android:text="@string/clearOrderLabel"
                    android:textColor="#63473E" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>