<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrdersActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton4"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D89968"
                android:text="@string/backLabel"
                android:textColor="#3A2A25"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/storeOrderTextView"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="right|center_vertical"
                android:textColor="#5A4139"
                android:text="@string/orderTextView"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/orderSpinner"
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textColor="#5A4139"
                android:contentDescription="@string/orderSpinnerLabel" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <ListView
            android:id="@+id/storeOrderListView"
            android:background="@drawable/view_border"
            android:layout_width="match_parent"
            android:layout_height="307dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/storeOrderTotalTextView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/text_border_2"
            android:gravity="center"
            android:text="@string/totalTextView"
            android:textColor="#5A4139"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/removeOrderButton"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="#D89968"
                android:fontFamily="sans-serif-medium"
                android:text="@string/removeOrderLabel"
                android:textColor="#5A4139"
                android:textSize="28sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>